@@ -1,5 +1,6 @@
 Version 0.9.0   - xx February 2002
-  * Fix spurious warnings about modifying default arguments 
+  * Fix spurious warnings for implicit returns when using try/finally:
+  * Fix spurious warnings for modifying default arguments 
         when calling {}.get(), {}.has_key(), [].index(), [].count(), etc.
 
 Version 0.8.9   - 02 February 2002
